[gd_scene load_steps=5 format=2]

[ext_resource path="res://theme.png" type="Texture" id=1]
[ext_resource path="res://fonts/new_dynamicfont.tres" type="DynamicFont" id=2]
[ext_resource path="res://Menus/menubar.gd" type="Script" id=3]

[sub_resource type="Theme" id=1]
default_font = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="NinePatchRect" type="NinePatchRect" parent="Control"]
margin_left = 72.0
margin_top = 232.0
margin_right = 390.0
margin_bottom = 256.0
texture = ExtResource( 1 )
draw_center = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Control/NinePatchRect"]
margin_right = 319.0
margin_bottom = 24.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Inventory" type="Button" parent="Control/NinePatchRect/HBoxContainer"]
margin_right = 39.0
margin_bottom = 24.0
text = "INV"

[node name="Squad" type="Button" parent="Control/NinePatchRect/HBoxContainer"]
margin_left = 43.0
margin_right = 82.0
margin_bottom = 24.0
text = "Sqd"

[node name="Testing Down" type="Button" parent="Control/NinePatchRect/HBoxContainer"]
margin_left = 86.0
margin_right = 125.0
margin_bottom = 24.0
text = "---"

[node name="Testing Up" type="Button" parent="Control/NinePatchRect/HBoxContainer"]
margin_left = 129.0
margin_right = 168.0
margin_bottom = 24.0
text = "---"

[node name="Save" type="Button" parent="Control/NinePatchRect/HBoxContainer"]
margin_left = 172.0
margin_right = 220.0
margin_bottom = 24.0
text = "Save"

[node name="Quit" type="Button" parent="Control/NinePatchRect/HBoxContainer"]
margin_left = 224.0
margin_right = 272.0
margin_bottom = 24.0
text = "Quit"
[connection signal="pressed" from="Control/NinePatchRect/HBoxContainer/Inventory" to="." method="_on_Inventory_pressed"]
[connection signal="pressed" from="Control/NinePatchRect/HBoxContainer/Squad" to="." method="_on_Squad_pressed"]
[connection signal="pressed" from="Control/NinePatchRect/HBoxContainer/Testing Down" to="." method="_on_Testing_Down_pressed"]
[connection signal="pressed" from="Control/NinePatchRect/HBoxContainer/Testing Up" to="." method="_on_Testing_Up_pressed"]
[connection signal="pressed" from="Control/NinePatchRect/HBoxContainer/Save" to="." method="_on_Save_pressed"]
[connection signal="pressed" from="Control/NinePatchRect/HBoxContainer/Quit" to="." method="_on_Quit_pressed"]
